# vlc-yandex-music

./: CMakeLists.txt  Makefile  README.md  json_parser.c  test_api_yandex.c  test_curl.c  test_return_struct.c  testxml.c
src/: api.c  api.h  config.h  handler.c  handler.h  hello.c  interceptor.c  interceptor.h  library.c
